RESOLVED FIXED280635
REGRESSION(284435@main) Broke CloseWebViewAfterEnterFullscreen. tests
https://bugs.webkit.org/show_bug.cgi?id=280635
Summary REGRESSION(284435@main) Broke CloseWebViewAfterEnterFullscreen. tests
Jonathan Bedard
Reported 2024-09-30 13:55:14 PDT
284435@main broke a number of tests: TestWebKitAPI.CloseWebViewAfterEnterFullscreen.ElementFullscreen TestWebKitAPI.CloseWebViewAfterEnterFullscreen.VideoFullscreen TestWebKitAPI.CloseWebViewDuringEnterFullscreen.VideoFullscreen History view: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.CloseWebViewAfterEnterFullscreen.ElementFullscreen
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-30 13:55:31 PDT
Matt Woodrow
Comment 2 2024-09-30 17:36:08 PDT
EWS
Comment 3 2024-09-30 20:14:32 PDT
Committed 284483@main (524c5c896dca): <https://commits.webkit.org/284483@main> Reviewed commits have been landed. Closing PR #34481 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.