REGRESSION(284435@main) Broke CloseWebViewAfterEnterFullscreen tests. https://bugs.webkit.org/show_bug.cgi?id=280635 <rdar://136995449>

Reviewed by Charlie Wolfe.

Ensure the completion handler is always called, even if we take an early exit
from scalePage.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::scalePage):

Canonical link: https://commits.webkit.org/284483@main